fixed dark mode box

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,5 +1,15 @@
+/* Default light theme */
+:root {
+    --background-color: #f0f0f0;
+}
+
+/* Dark theme */
+[data-theme="dark"] {
+    --background-color: #121212;
+}
+
 .infobox {
-    background-color: #f0f0f0; /* Light gray background */
+    background-color: var(--background-color); /* Light gray background */
     border: 1px solid #d0d0d0; /* Subtle border */
     padding: 15px;
     margin: 15px 0;         /* Space above and below the box */
@@ -10,7 +20,7 @@
   }
 
 .button_class{
-    background-color: #4CAF50; /* Green */
+    background-color: #990000; /* Green */
     border: none;
     color: white;
     padding: 10px 22px;
